overlapping issues

--- a/src/Section_6.css
+++ b/src/Section_6.css
@@ -1,4 +1,4 @@
-.section-6 {
+#section-6-container {
   width: 100% !important;
   position: relative;
   margin-top: 250px;
